# prompt-steering

./: .gitignore  analyze_introspection_results.py  analyze_kv_boxplot.py  analyze_kv_differences.py  analyze_kv_directions.py  analyze_results.py  analyze_steering_vector_similarity.py  capture_kv_matrices.py  classify_responses.py  config.py  config.yaml  experiment_position_detection.py  experiment_prompt_variants - Copy.py  experiment_prompt_variants.py  experiment_prompt_vs_full_steering.py  generate_steering_vectors.py  model_structure.txt  pyproject.toml  run_experiments.py  steering.py
configs/: gpt-oss-120b.yaml
results/kv_analysis/: KV_ANALYSIS_SUMMARY.md
results/kv_analysis/kv_capture_20260314_195839/: metadata.json
results/kv_analysis/kv_capture_20260314_200402/: metadata.json
results/kv_analysis/steering_vector_analysis/: steering_vector_similarity_summary.json
results/prompt_variants/: results_20260314_133357.classified.json  results_20260314_133357.json  results_20260314_142635.classified.json  results_20260314_142635.json  results_20260314_165501.json  results_20260314_170116.json  results_20260314_171030.json  results_20260314_172309.json  results_20260314_173912.classified.json  results_20260314_173912.json
results/prompt_vs_full/: results_20260314_133723.json  results_20260314_144222.json
results/test/: results_20260314_164813.json  results_20260314_165004.json
steering_vectors/Qwen-Qwen3.5-4B/: metadata.json
steering_vectors/google-gemma-3-1b-it/: metadata.json
steering_vectors/google-gemma-3-4b-it/: metadata.json
(+4614 files in other folders)
